  See https://github.com/Pylons/pyramid/pull/2785

- Fix an inconsistency in the documentation between view predicates and
  route predicates and highlight the differences in their APIs.
  See https://github.com/Pylons/pyramid/pull/2765

- Fix incompatibilities in the ``prequest`` test suite caused by changes in
  WebOb 1.7. See https://github.com/Pylons/pyramid/pull/2788

.. _changes_1.7.3:

1.7.3 (2016-08-17)
==================

Bug Fixes
---------

- Oops, Apparently wheels do not build cleanly every time, so build artifacts
  from 1.6.3 creeped into the wheel for 1.7.2. Note to self: ``rm -rf build``.

.. _changes_1.7.2:

1.7.2 (2016-08-16)
==================

- Revert changes from #2706 released in Pyramid 1.7.1. JSON renderers will
  continue to return unicode data instead of UTF-8 encoded bytes. This means
  that WebOb responses are still expected to handle unicode data even though
  JSON does not have a charset.
  See https://github.com/Pylons/pyramid/issues/2744

.. _changes_1.7.1:

1.7.1 (2016-08-16)
==================

- Change flake8 noqa directive to ignore only a single line instead of the
  entire file in scaffold and documentation. See
  https://github.com/Pylons/pyramid/pull/2646

- Add option to build docs as PDF only via tox. See:
  https://github.com/Pylons/pyramid/issues/2575

- Correct the column type used in the SQLAlchemy + URL Dispatch tutorial by
  changing it from Integer to Text. See
  https://github.com/Pylons/pyramid/pull/2591

- Fix a bug in which the ``password_hash`` in the Wiki2 tutorial was sometimes
  being treated as bytes instead of unicode.
  See https://github.com/Pylons/pyramid/pull/2705

- Properly emit a ``DeprecationWarning`` for using
  ``pyramid.config.Configurator.set_request_property`` instead of
  ``pyramid.config.Configurator.add_request_method``.

- Updated Windows installation instructions and related bits.
  See: https://github.com/Pylons/pyramid/issues/2661
